turn into module
decided it's better suited as a module

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+tests/
 test/
-testing/
-src/test/
-src/testing/
-src/*.elh
-src/docs/
-src/assets/
-src/*.css
-src/favicon.ico
+proto/
+testing/test/
+testing/tests/
+testing/testing/
+testing/proto/
+testing/*.elh
+testing/docs/
+testing/assets/
+testing/*.css
+testing/favicon.ico
